--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error Page</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/errors/404.css" rel="stylesheet">
+    <link th:href="@{/css/errors/404.css}" rel="stylesheet">
 </head>
 <body>
 <div class="content">
@@ -24,7 +23,7 @@
     </svg>
 
     <h1 style="color:white;">Page Not Found</h1>
-    <a href="#">Back to Home</a>
+    <a th:href="@{/}">Back to Home</a>
 </div>
 </body>
 </html>
