Adding page for my trainings

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -70,9 +70,8 @@
         <img src="/images/indexMain.jpg" alt="First slide">
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>Explore our gym and  equipment </h1>
-            <p>Experience fitness like never before at CrossFit Stuttgart, where cutting-edge training meets a passionate community.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <h1>Discover CrossFit Stuttgart</h1>
+            <p>Step into the world of CrossFit Stuttgart, where fitness isn't just a routine but a lifestyle. We're dedicated to delivering unparalleled training experiences that blend cutting-edge techniques with a supportive community atmosphere. Whether you're aiming to build strength, improve endurance, or simply lead a healthier life, our diverse programs cater to all fitness levels and goals. Join us and explore how CrossFit Stuttgart can empower you to redefine your limits and achieve lasting fitness success.</p>
           </div>
         </div>
       </div>
