Updating event cards in the about u page

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -87,33 +87,74 @@
 
  <!--Here will be the most liked events displayed -->
 
+  <!-- Events Section -->
   <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
+    <h2 class="mb-3 text-white" >Upcoming Events</h2>
+    <!-- Three columns of events -->
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Event 1</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <div class="single_event position-relative">
+          <div class="event_thumb">
+            <img src="https://www.bootdey.com/image/500x500/20B2AA/000000" alt="Event 1">
+          </div>
+          <div class="event_details">
+            <div class="d-flex mb-4">
+              <div class="date"><span>15</span> Jun</div>
+              <div class="time-location">
+                <p><span class="ti-time mr-2"></span> 12:00 AM - 12:30 AM</p>
+                <p><span class="ti-location-pin mr-2"></span> Hilton Quebec</p>
+              </div>
+            </div>
+            <p>
+              One make creepeth man for so bearing their firmament won't fowl meat over seas great
+            </p>
+            <a href="#" class="btn btn-primary rounded-0 mt-3">View Details</a>
+          </div>
+        </div>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Event 2</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <div class="single_event position-relative">
+          <div class="event_thumb">
+            <img src="https://www.bootdey.com/image/500x500/EE82EE/000000" alt="Event 2">
+          </div>
+          <div class="event_details">
+            <div class="d-flex mb-4">
+              <div class="date"><span>15</span> Jun</div>
+              <div class="time-location">
+                <p><span class="ti-time mr-2"></span> 12:00 AM - 12:30 AM</p>
+                <p><span class="ti-location-pin mr-2"></span> Hilton Quebec</p>
+              </div>
+            </div>
+            <p>
+              One make creepeth man for so bearing their firmament won't fowl meat over seas great
+            </p>
+            <a href="#" class="btn btn-primary rounded-0 mt-3">View Details</a>
+          </div>
+        </div>
       </div><!-- /.col-lg-4 -->
+
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Event 3</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <div class="single_event position-relative">
+          <div class="event_thumb">
+            <img src="https://www.bootdey.com/image/500x500/20B2AA/000000" alt="Event 1">
+          </div>
+          <div class="event_details">
+            <div class="d-flex mb-4">
+              <div class="date"><span>15</span> Jun</div>
+              <div class="time-location">
+                <p><span class="ti-time mr-2"></span> 12:00 AM - 12:30 AM</p>
+                <p><span class="ti-location-pin mr-2"></span> Hilton Quebec</p>
+              </div>
+            </div>
+            <p>
+              One make creepeth man for so bearing their firmament won't fowl meat over seas great
+            </p>
+            <a href="#" class="btn btn-primary rounded-0 mt-3">View Details</a>
+          </div>
+        </div>
       </div><!-- /.col-lg-4 -->
+
     </div><!-- /.row -->
-
 
     <!-- Some Quotes, Maybe we can display when each user add a quotes and display random three -->
 
