--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -180,6 +180,7 @@ button:hover:before {
     transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
 }
 
+
 .checkbox {
     position: relative;
 }
@@ -199,6 +200,32 @@ button:hover:before {
 .checkbox input:checked ~ .checkmark:after {
     display: block;
 }
+
+#homeButton {
+    display: inline-block;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    margin-top: 15px;
+    margin-left: 2rem;
+    line-height: 1.5;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    text-decoration: none; /* Remove underline from anchor tag */
+}
+
+#homeButton:hover {
+    text-decoration: none; /* Remove underline on hover */
+    color: #fff; /* Text color on hover */
+    background-color: #343a40; /* Background color on hover */
+    border-color: #343a40; /* Border color on hover */
+}
+
 
 .checkmark {
     position: absolute;
