Adding two new pages and configuring the thymeleaf

--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -34,8 +34,7 @@
 
         <div class="toggle-container">
             <input type="checkbox" id="rememberme" class="toggle" name="rememberme">
-            <label for="rememberme" class="slider round"></label>
-            <span class="mytext">Remember me</span> <!-- Added class mytext for styling -->
+            <span class="mytext">Remember me</span> <!-- FIX IT  -->
         </div>
 
         <button class="btn">
