--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -26,32 +26,29 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/}"  th:classappend="${activeLink == 'brands'}? 'active'">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize= "!hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/about-us}">About Us</a>
                 </li>
-                <li class="nav-item" >
+                <li class="nav-item" sec:authorize= "!hasRole('ADMIN')" >
                     <a class="nav-link" th:href="@{/workouts}" >Workouts</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/events/add-event/}">Add Event</a>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item" sec:authorize="isAuthenticated() and !hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/my-workouts}">My Workouts</a>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item" sec:authorize="isAuthenticated() and !hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/profile}">Profile</a>
                 </li>
-                <li class="nav-item" >
+                <li class="nav-item"  sec:authorize= "!hasRole('COACH') and !hasRole('ADMIN')" >
                     <a class="nav-link" th:href="@{/memberships}">Memberships</a>
                 </li>
-                <li class="nav-item" >
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                    <a class="nav-link" th:href="@{/profiles-dashboard}">All User Profiles</a>
+                    <a class="nav-link" th:href="@{/profiles-dashboard/{id}(id=${#authentication.principal.id})}">All User Profiles</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('COACH')">
-                    <a class="nav-link" th:href="@{/weekly-schedule}">Weekly Sessions</a>
+                    <a class="nav-link" th:href="@{/my-weekly-schedule/{id}(id=${#authentication.principal.id})}">Upcoming Trainings</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" th:method="POST">
