Adding a blog page and also creating some get mappings for the pages

--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -34,7 +34,8 @@
 
         <div class="toggle-container">
             <input type="checkbox" id="rememberme" class="toggle" name="rememberme">
-            <span class="mytext">Remember me</span> <!-- FIX IT  -->
+            <label for="rememberme" class="slider round"></label>
+            <span class="mytext">Remember me</span> <!-- TODO : FIX IT  -->
         </div>
 
         <button class="btn">
