--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" th:href="@{/workouts}" >Workouts</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/events/add-event/}">Add Event</a>
+                    <a class="nav-link" th:href="@{/events/add-event/{id}(id=${#authentication.principal.id})}">Add Event</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated() and !hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/my-workouts}">My Workouts</a>
