--- a/crossfit-client/src/main/resources/templates/about.html
+++ b/crossfit-client/src/main/resources/templates/about.html
@@ -91,87 +91,45 @@
   <div class="container marketing">
     <h2 class="mb-3 text-white" >Upcoming Events</h2>
     <!-- Three columns of events -->
+    <!-- Three columns of events -->
+    <!-- Three columns of events -->
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4" th:each="event : ${events}">
         <div class="single_event position-relative">
-          <div class="event_thumb">
-            <img src="https://www.bootdey.com/image/500x500/20B2AA/000000" alt="Event 1">
+          <!-- Event Video -->
+          <div class="event_video">
+            <iframe th:src="@{'https://www.youtube.com/embed/' + ${event.videoUrl}}"
+                    frameborder="0" allowfullscreen></iframe>
           </div>
+          <!-- Event Details -->
           <div class="event_details">
             <div class="d-flex mb-4">
-              <div class="date"><span>15</span> Jun</div>
+              <div class="date"><span th:text="${#dates.format(event.date, 'd')}"
+                                      class="font-weight-bold"></span>
+                <span th:text="${#dates.format(event.date, 'MMM')}"
+                      class="text-uppercase"></span></div>
               <div class="time-location">
-                <p><span class="ti-time mr-2"></span> 12:00 AM - 12:30 AM</p>
-                <p><span class="ti-location-pin mr-2"></span> Hilton Quebec</p>
+                <p><span class="ti-time mr-2"></span>
+                  <span th:text="${#dates.format(event.date, 'hh:mm a')}"></span></p>
+                <p><span class="ti-location-pin mr-2"></span>
+                  <span th:text="${event.address}"></span></p>
               </div>
             </div>
             <!-- Display number of participants -->
-            <p>Current participants: <span id="currentParticipants">10</span></p> <!-- Replace with actual number using Thymeleaf -->
-            <p>
-              One make creepeth man for so bearing their firmament won't fowl meat over seas great
-            </p>
+            <p>Current participants: <span id="currentParticipants">10</span></p>
+            <!-- Event Description -->
+            <p th:text="${event.description}"></p>
             <!-- Enroll form button -->
             <form th:action="@{/about-us/enroll-event}" th:method="POST">
-              <button type="submit" class="btn btn-primary rounded-0 mt-3" sec:authorize="hasRole('MEMBER')">
-                Enroll
+              <button type="submit" class="btn btn-primary rounded-0 mt-3"
+                      sec:authorize="hasRole('MEMBER')">Enroll
               </button>
             </form>
           </div>
         </div>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <div class="single_event position-relative">
-          <div class="event_thumb">
-            <img src="https://www.bootdey.com/image/500x500/EE82EE/000000" alt="Event 2">
-          </div>
-          <div class="event_details">
-            <div class="d-flex mb-4">
-              <div class="date"><span>15</span> Jun</div>
-              <div class="time-location">
-                <p><span class="ti-time mr-2"></span> 12:00 AM - 12:30 AM</p>
-                <p><span class="ti-location-pin mr-2"></span> Hilton Quebec</p>
-              </div>
-            </div>
-            <p>
-              One make creepeth man for so bearing their firmament won't fowl meat over seas great
-            </p>
-            <!-- Enroll form button -->
-            <form th:action="@{/about-us/enroll-event}" th:method="POST">
-              <button type="submit" class="btn btn-primary rounded-0 mt-3" sec:authorize="hasRole('MEMBER')">
-                Enroll
-              </button>
-            </form>
-          </div>
-        </div>
-      </div><!-- /.col-lg-4 -->
-
-      <div class="col-lg-4">
-        <div class="single_event position-relative">
-          <div class="event_thumb">
-            <img src="https://www.bootdey.com/image/500x500/20B2AA/000000" alt="Event 1">
-          </div>
-          <div class="event_details">
-            <div class="d-flex mb-4">
-              <div class="date"><span>15</span> Jun</div>
-              <div class="time-location">
-                <p><span class="ti-time mr-2"></span> 12:00 AM - 12:30 AM</p>
-                <p><span class="ti-location-pin mr-2"></span> Hilton Quebec</p>
-              </div>
-            </div>
-            <p>
-              One make creepeth man for so bearing their firmament won't fowl meat over seas great
-            </p>
-            <!-- Enroll form button -->
-            <form  th:action="@{/about-us/enroll-event}" th:method="POST">
-              <button type="submit" class="btn btn-primary rounded-0 mt-3" sec:authorize="hasRole('MEMBER')">
-                Enroll
-              </button>
-            </form>
-          </div>
-        </div>
-      </div><!-- /.col-lg-4 -->
-
     </div><!-- /.row -->
+
 
     <!-- Some Quotes, Maybe we can display when each user add a quotes and display random three -->
 
